# PythiaLabelGenerator

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/actions/setup-iqtree/: action.yml
.github/actions/setup-raxmlng/: action.yml
.github/actions/test-label-cli/: action.yml
.github/workflows/: test-label-generator.yml
etc/: environment.yml
labelgenerator/: __init__.py  iqtree.py  iqtree_parser.py  label.py  logger.py  main.py  raxmlng.py
tests/: conftest.py  test_config.py  test_iqtree.py  test_iqtree_parser.py  test_label.py  test_main.py  test_raxmlng.py
tests/data/logs/: AA.iqtree.iqtree  DNA.iqtree.iqtree  MORPH.iqtree.iqtree  test.raxml.bestModel  test.raxml.bestTree  test.raxml.mlTrees  test.raxml.rba  test.raxml.startTree  test.rfdist.raxml.rfDistances
tests/data/mltrees/: AA.raxml.bestModel  AA.raxml.bestTree  AA.raxml.mlTrees  AA.raxml.rba  AA.raxml.startTree  DNA.raxml.bestModel  DNA.raxml.bestTree  DNA.raxml.bestTreeCollapsed  DNA.raxml.mlTrees  DNA.raxml.rba  DNA.raxml.startTree  MORPH.raxml.bestModel  MORPH.raxml.bestTree  MORPH.raxml.bestTreeCollapsed  MORPH.raxml.mlTrees  MORPH.raxml.rba  MORPH.raxml.startTree
