[metadata]
name = LabelGenerator
description = TODO
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tschuelia/LabelGenerator
author = Julia Haag
author_email = julia.haag@h-its.org
version = 1.0.0
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
include_package_data = true
install_requires =
    pypythia >= 2.0.0
    loguru

python_requires = >=3.9
package_dir=
    =.
packages = find:

[options.extras_require]
test =
    pytest
    pyarrow

[options.package_data]
* = predictors/*.txt

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
    label = labelgenerator.main:main
